Settings: Fix settings tabs alignment

--- a/css/admin.css
+++ b/css/admin.css
@@ -59,7 +59,7 @@
 .fv-player-interface-form-group td { width:50%; }
 
 .flowplayer-wrapper { width: 70%; display: inline-block; float: right;}
-@media only screen and (max-width: 940px) {.flowplayer-wrapper { width: 100%; float: none;} .form-table2.flowplayer-settings {width: 100% !important;}}
+@media only screen and (max-width: 1024px) {.flowplayer-wrapper { width: 100%; float: none;} .form-table2.flowplayer-settings {width: 100% !important;}}
 
 
 #fv-player-popups-settings tr.data:nth-child(even) { background-color: #f6f6f6; }
